tests/snapshots/test_happy_path__minimal_valid_check.snap
---
source: tests/test_happy_path.rs
expression: value
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  1 ADRs
  1 work items
  0 verification guards

warning[W0108]: Work item has placeholder description (hint: `govctl work edit WI-<DATE>-001 description --set "..."`) (gov/work/<DATE>-test-work-item.toml)
exit: 0
