tests/snapshots/test_happy_path__minimal_valid_full_workflow.snap
---
source: tests/test_happy_path.rs
expression: value
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  1 ADRs
  1 work items
  0 verification guards
  0 conformance cases

warning[W0108]: Work item has placeholder description (hint: `govctl work edit WI-<DATE>-001 description --set "..."`) (gov/work/<DATE>-test-work-item.toml)
exit: 0

$ govctl rfc list
[
  {
    "id": "RFC-0001",
    "version": "1.0.0",
    "status": "normative",
    "phase": "stable",
    "title": "Test RFC"
  }
]
exit: 0

$ govctl clause list
[
  {
    "id": "C-EXAMPLE",
    "rfc_id": "RFC-0001",
    "kind": "normative",
    "status": "active",
    "title": "Example Clause"
  }
]
exit: 0

$ govctl adr list
[
  {
    "id": "ADR-0001",
    "status": "accepted",
    "date": "2026-01-01",
    "title": "Test Decision"
  }
]
exit: 0

$ govctl work list
[
  {
    "id": "WI-<DATE>-001",
    "status": "active",
    "title": "Test work item"
  }
]
exit: 0

$ govctl status
govctl status

RFCs
  normative    1
  Total        1

Clauses
  active       1
  Total        1

ADRs
  accepted     1
  Total        1

Work Items
  active       1
  Total        1

Active Work
  WI-<DATE>-001 Test work item

Conformance Cases
  Total        0

exit: 0
