tests/snapshots/test_happy_path__minimal_valid_list_adr.snap
---
source: tests/test_happy_path.rs
expression: value
---
$ govctl adr list
[
  {
    "id": "ADR-0001",
    "status": "accepted",
    "date": "2026-01-01",
    "title": "Test Decision"
  }
]
exit: 0
