tests/snapshots/test_happy_path__minimal_valid_list_clause.snap
---
source: tests/test_happy_path.rs
expression: value
---
$ govctl clause list
[
  {
    "id": "C-EXAMPLE",
    "rfc_id": "RFC-0001",
    "kind": "normative",
    "status": "active",
    "title": "Example Clause"
  }
]
exit: 0
