tests/snapshots/test_happy_path__minimal_valid_list_rfc.snap
---
source: tests/test_happy_path.rs
expression: value
---
$ govctl rfc list
[
  {
    "id": "RFC-0001",
    "version": "1.0.0",
    "status": "normative",
    "phase": "stable",
    "title": "Test RFC"
  }
]
exit: 0
