tests/snapshots/test_happy_path__minimal_valid_list_work.snap
---
source: tests/test_happy_path.rs
expression: value
---
$ govctl work list
[
  {
    "id": "WI-<DATE>-001",
    "status": "active",
    "title": "Test work item"
  }
]
exit: 0
