tests/snapshots/test_happy_path__minimal_valid_status.snap
---
source: tests/test_happy_path.rs
expression: value
---
$ govctl status
govctl status

RFCs
  normative    1
  Total        1

Clauses
  active       1
  Total        1

ADRs
  accepted     1
  Total        1

Work Items
  active       1
  Total        1

Active Work
  WI-<DATE>-001 Test work item

Verification Guards
  Total        0

Conformance Cases
  Total        0

Releases
  Total        0

exit: 0
